# HFT-Research

./: .gitignore  Makefile  README.md  VENV.txt  app.py  dashboard.py  strategy.onnx  tickify.py  trades.csv
artifacts/20250929-210745_logit_momentum_5_h5_e0.0/: X_test.parquet  y_pred.npy
artifacts/20250929-211424_logit_momentum_5_h5_e0.0/: meta.json  model.joblib
artifacts/20250929-214117_logit_momentum_5_h5_e0.0/: y_prob.npy
artifacts/20250929-221659_logit_realized_vol_20_h5_e0.0/: X_test.parquet  meta.json  model.joblib  y_pred.npy  y_prob.npy  y_test.parquet
configs/: run.yaml
data/: sample.csv  signals_buy.csv  trades_executed.csv
docs/: TODO.md
engine_cpp/: CMakeLists.txt  strategy_runner.cpp
engine_cpp/include/: MarketMaker.h  Order.h  OrderBook.h
engine_cpp/src/: MarketMaker.cpp  OrderBook.cpp  main.cpp
experiments/: backtest.py  pipeline.py  train.py
factors/: __init__.py  base.py  engine.py  factors.yaml
factors/liquidity/: order_imbalance.py  spread.py
factors/price/: momentum.py
factors/volatility/: realized_vol.py
models/: __init__.py  base.py
models/linear/: logistic.py
models/tree/: xgb.py
py_strategy/: check_env.py  export_model.py  lstm_toy.onnx  orderbook_snapshot.csv  output.csv  plot_signal.py  read.py  read_config_and_data.py  read_trades.py  requirements.txt  sample_to_tick.py  trades.csv
templates/: index.html
templates/css/: style.css
templates/js/: app.js  backtest.js  factors.js  kpi.js  models.js
